2001-07-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Pre-render flat areas for each chunk.

2001-07-04  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h,npcedit.cc: ExultStudio can now add new NPC's to the
	game (but schedule-setting still needs a bit of work).

2001-07-04  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/exult_faq.xml: FAQ updated see FAQ for details
	* Faq: updated

2001-07-03  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, Makefile.*: version to 0.94cvs
	* exult_faq.xml: updated URL to Travis' snapshots page
	* scale.cc: new, fast Point & Interlaced scalers (mostly by Max)
	* ibuf8.cc: new & improved copy8 (mostly by Ryan :-) )
	
2001-06-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/splitshp.cc: implemented merging shapes
	* mapedit/PhotoshopShapePlugin.zip: .shp plugin for Adobe Photoshop

2001-06-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* NEWS, Makefile.*, configure.in, README.*: updated for release
	* exult.cc: clarified "exult.flx not found" error msg a bit

2001-06-28  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.cc: Fix for pennant flag animation in SI.

2001-06-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/Paperdoll_gump_info.cc: fixed disappearing bedrolls

2001-06-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* audio/SDL_mapping.*: 'const' in MixAudio only if SDL >= 1.2.1

2001-06-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.spec.in: removed explicit SDL requirement (added automatically)
	* configure.in: disabled libkmid by default

2001-06-25  Christoph Reichenbach  <jameson@linuxgames.com>

	* audio/SDL_mapping.h: const'ed MixAudio()'s 2nd parameter to silence
	cxx

2001-06-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.cc: put reduce_health() call back in combat :-)
	
2001-06-24  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.*: Removed unrequired write_ireg() method.

	* exult.cc: Fixed up a SI movement bug.
